# deimos-router

./: .cursorrules  .gitignore  EXPLAIN_FEATURE.md  README.md  config.example.json  example_auto_task_rule.py  example_code_language_rule.py  example_code_rule.py  example_complete_system.py  example_explain_feature.py  example_logging.py  example_message_length_rule.py  example_rule_based_routing.py  example_usage.py  pyproject.toml  secrets.example.json  suggested-rules.md  test_logging_system.py  test_rule_chaining.py
docs/source/: api-reference.rst  conf.py  examples.rst  getting-started.rst  index.rst  rule-types.rst  user-guide.rst
examples/: example_auto_task_rule.py  example_code_language_rule.py  example_code_rule.py  example_conversation_context_rule.py  example_explain_feature.py  example_logging.py  example_message_length_rule.py  example_natural_language_rule.py  example_rule_based_routing.py  example_usage.py
logs/: deimos-logs-2025-08-27.jsonl  deimos-logs-2025-08-28.jsonl  deimos-logs-2025-09-11.jsonl
notebooks/: basic-testing.ipynb  deimos-guide.ipynb  routing_metadata_example.py  test_default_explain.py  updated_notebook_example.py
notebooks/logs/: deimos-logs-2025-08-28.jsonl  deimos-logs-2025-09-11.jsonl
src/deimos_router/: __init__.py  chat.py  config.py  default_models.py  router.py
tests/: test_auto_task_rule.py  test_chat.py  test_config.py  test_conversation_context_rule.py  test_deimos_router.py  test_e2e_comprehensive.py  test_explain_feature.py  test_message_length_rule.py  test_natural_language_rule.py  test_router.py  test_rules.py
(+14 files in other folders)
