[project]
name = "deimos-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam Michael Wood", email = "adam@withmartian.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
